# Memory-Pak

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  Trunk.toml  build.bat  build.rs  consoles.yaml  index.html  justfile  main.py  memory-pak.desktop  package.json  requirements.txt
.cargo/: config.toml
.github/actions/setup-wasm-pack/: action.yml
.github/workflows/: ci.yml  deploy.yml  package.yml
crates/memory_pak_core/: Cargo.toml  build.rs
crates/memory_pak_core/src/: app.rs  catalog.rs  compiled.rs  ids.rs  import_export.rs  lib.rs  model.rs  models.rs  query.rs
crates/memory_pak_wasm/: Cargo.toml
crates/memory_pak_wasm/src/: lib.rs
database/: consoles.json  legodimensions.json
database/collectibles/: legodimensions.json  skylanders.json
database/games/: dreamcast.json  gameboy.json  gameboyadvance.json  gameboycolor.json  gamecube.json  gamegear.json  genesis.json  mastersystem.json  n64.json  nes.json  nintendo3ds.json  nintendods.json  pico.json  playstation.json  playstation2.json  playstation3.json  playstationvita.json  psp.json  saturn.json  sega32x.json  segacd.json  sg1000.json  snes.json  wii.json  wiiu.json  xbox.json  xbox360.json
frontend/: index.html  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
frontend/public/: manifest.webmanifest  service-worker.js
frontend/src/: App.svelte  app.d.ts  main.ts  styles.css
frontend/src/lib/: backend.ts  collectionController.ts  debounce.ts  rowFormat.ts  sortOptions.ts  tauriBackend.ts  types.ts  updates.test.ts  updates.ts  webStorage.test.ts  webStorage.ts  webWasmBackend.ts
frontend/src/lib/components/: BottomTabs.svelte  DesktopRowCard.svelte  DetailSheet.svelte  MobileRowCard.svelte  OptionSheet.svelte  RowList.svelte  Sidebar.svelte  Toolbar.svelte  TopBar.svelte  UpdateBanner.svelte
frontend/tests/: app.spec.ts
games/: 3ds.yaml  ds.yaml  gamecube.yaml  n64.yaml  nes.yaml  ps1.yaml  snes.yaml  wii.yaml  wiiu.yaml
icons/macos/: AppIcon.icns
scripts/: stage-release-artifacts.mjs  sync-icons.ts  write-tauri-updater-config.mjs
site/: CNAME  index.html  manifest.json  script.js  styles.css
site/app/: Memory-Pak-60288ece842d1952.js  Memory-Pak-6766ff40b8c98e6a.js  index.html
src/: android_platform.rs  console_data.rs  data_validation.rs  game_data.rs  lego_dimensions.rs  lib.rs  main.rs  persistence.rs  skylanders.rs  ui.rs
src-tauri/: Cargo.toml  tauri.conf.json  tauri.updater.conf.json.example
src-tauri/capabilities/: default.json  mobile-remote-dev.json
src-tauri/src/: lib.rs  main.rs  persistence.rs
wix/: License.rtf  main.wxs
