[workspace]
members = [
    "crates/memory_pak_core",
    "crates/memory_pak_wasm",
    "src-tauri",
]
resolver = "2"

[workspace.package]
version = "0.3.0"
edition = "2021"
authors = ["Aspenini"]
license = "MIT"
repository = "https://github.com/Aspenini/Memory-Pak"
homepage = "https://aspenini.github.io/Memory-Pak"

[workspace.dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "serde", "wasmbind"] }
directories = "6.0"
include_dir = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
thiserror = "2.0"
unicode-normalization = "0.1"
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"

# Smaller, faster Tauri release bundles. The defaults add ~30-50% binary size
# and slow down startup; these are the values the Tauri team recommends.
[profile.release]
opt-level = "s"
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"

