[package]
name = "memory-pak-tauri"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Tauri shell for Memory Pak"
build = "build.rs"

[lib]
name = "memory_pak_tauri"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "memory-pak"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.6.1", features = [] }

[dependencies]
directories.workspace = true
memory_pak_core = { path = "../crates/memory_pak_core" }
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true
tauri = { version = "2.11.1", features = [] }
tauri-plugin-dialog = "2.7.1"
tauri-plugin-opener = "2.5.4"
tauri-plugin-process = "2.3.1"
tauri-plugin-updater = "2.10.1"
