[package]
name = "memory_pak_core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Shared Memory Pak domain logic and data model"

[dependencies]
chrono.workspace = true
include_dir.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
unicode-normalization.workspace = true

